--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,8 @@
+@media (max-width: 1200px) {
+    .offers .offer-box .offer-info .heading-bigger {
+        font-size: 3rem;
+    }
+}
 @media (max-width: 1030px) {
     /* Home CSS */
     .home .home-banner-1,
@@ -8,6 +13,7 @@
     .home .home-banner .home-banner-text {
         transform: translate(-80%, -50%);
     }
+    /* Offer CSS */
 }
 
 @media (max-width: 991px) {
