--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +6,7 @@
     outline: 0;
     border: 0;
     background-color: transparent;
+    text-transform: capitalize;
 }
 
 :root {
@@ -51,6 +51,7 @@ a:hover {
 }
 
 /* Navigation CSS */
+
 #header .fixed-top {
     box-shadow: 0 0.125rem 0.765rem rgb(0 0 0 / 5%);
 }
@@ -76,6 +77,7 @@ a:hover {
 }
 
 /* Home CSS */
+
 .home .home-banner-1,
 .home .home-banner-2 {
     background-repeat: no-repeat;
@@ -106,15 +108,107 @@ a:hover {
     left: 50%;
     transform: translate(-110%, -50%);
 }
+
 .home .home-banner .home-banner-text h1 {
     font-size: 6rem;
 }
+
 .home .carousel-indicators [data-bs-target] {
     background-color: var(--bg-danger);
     width: 2.5rem;
     height: 0.313rem;
 }
+
 .home .slider-icon {
     font-size: 3rem;
     color: var(--text-danger);
+}
+
+/* Offer CSS */
+.offers {
+    padding-top: 8.75rem;
+}
+.offers .offer-box {
+    overflow: hidden;
+}
+.offers .offer-box .offer-image::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: -100%;
+    z-index: 2;
+    display: block;
+    width: 50%;
+    height: 100%;
+    background: -webkit-linear-gradient(
+        to right,
+        rgb(255 255 255 / 0) 0%,
+        rgb(255 255 255 / 0.3) 100%
+    );
+    background: linear-gradient(
+        to right,
+        rgb(255 255 255 / 0) 0%,
+        rgb(255 255 255 / 0.3) 100%
+    );
+    transform: skew(-25deg);
+}
+.offers .offer-box .offer-image img {
+    transform: scale(1.02);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.offers .offer-box:hover .offer-image::before {
+    animation: effect_shine 1s;
+}
+@keyframes effect_shine {
+    100% {
+        left: 150%;
+    }
+}
+.offers .offer-overlay::before {
+    position: absolute;
+    content: "";
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0 0 0 / 0.4);
+    z-index: 1;
+}
+.offers .offer-box .offer-info {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transition: all 250ms ease-out;
+}
+.offers .offer-box .offer-info .heading-bigger {
+    font-size: 4.375rem;
+    line-height: 1;
+    text-transform: uppercase;
+    font-weight: 400;
+    margin-bottom: 0;
+    color: var(--text-white);
+}
+.offers .offer-box .offer-info .offer-title-1 {
+    color: var(--text-white);
+    font-size: 1.125rem;
+    font-weight: 300;
+    margin-bottom: 0;
+    letter-spacing: 2px;
+}
+.offers .offer-box .offer-info .btn-outline-danger {
+    color: var(--text-white);
+    border-color: var(--bg-white);
+    transition: all 0.3s ease-in-out;
+}
+.offers .offer-box .offer-info .btn-outline-danger:hover {
+    background: var(--bg-danger);
+    border-color: var(--bg-danger);
 }
