--- a/css/style.css
+++ b/css/style.css
@@ -212,3 +212,32 @@ a:hover {
     background: var(--bg-danger);
     border-color: var(--bg-danger);
 }
+/* Products CSS */
+.products {
+    padding-top: 8.75rem;
+}
+.headline h2::before {
+    content: "";
+    width: 30%;
+    height: 0.125rem;
+    background-color: var(--bg-danger);
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 0.625rem;
+}
+.products a {
+    text-decoration: none;
+    color: var(--text-black);
+}
+.productlist .product-image .product-image-secondary {
+    opacity: 0;
+    position: absolute;
+    inset: 0;
+}
+.productlist .product-image:hover .product-image-secondary {
+    opacity: 0;
+    position: absolute;
+    inset: 0;
+}
